Swap primary and tertiary color variables in dark theme

--- a/src/assets/css/global/base/variables.css
+++ b/src/assets/css/global/base/variables.css
@@ -64,9 +64,9 @@
   --color-text: var(--color-gray-100);
   --color-bg: var(--color-gray-800);
 
-  --color-primary: var(--color-pink-subdued);
+  --color-tertiary: var(--color-pink-subdued);
   --color-secondary: var(--color-blue-subdued);
-  --color-tertiary: var(--color-gold-subdued);
+  --color-primary: var(--color-gold-subdued);
 
   --color-text-accent: var(--color-gray-300);
   --color-bg-accent: var(--color-gray-700);
